--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.40",
+    "@langchain/groq": "^0.1.3",
+    "@langchain/langgraph": "^0.2.46",
+    "@langchain/mistralai": "^0.2.0",
+    "@langchain/mongodb": "^0.1.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "langchain": "^0.3.19",
+    "mongodb": "^6.13.0",
     "mongodb-memory-server": "^10.1.3",
     "mongoose": "^8.10.0",
     "next": "15.1.7",
