--- a/deployment.yaml
+++ b/deployment.yaml
@@ -25,6 +25,9 @@ spec:
           limits:
             cpu: "200m"
             memory: "256Mi"
+        env:
+        - name: MONGO_URL
+          value: "mongodb://mongodb-service:27017/studybuddy"
 ---
 apiVersion: v1
 kind: Service
