--- a/deployment.yaml
+++ b/deployment.yaml
@@ -28,6 +28,16 @@ spec:
         env:
         - name: MONGO_URL
           value: "mongodb://mongodb-service:27017/studybuddy"
+        - name: JWT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: jwt-secrets
+              key: JWT_SECRET
+        - name: JWT_REFRESH_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: jwt-secrets
+              key: JWT_REFRESH_SECRET
 ---
 apiVersion: v1
 kind: Service
