--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-easy-crop": "^5.2.0",
-    "styled-jsx": "^5.1.6"
+    "styled-jsx": "^5.1.6",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
