--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-easy-crop": "^5.2.0",
+    "react-icons": "^5.5.0",
     "styled-jsx": "^5.1.6",
+    "swiper": "^11.2.5",
+    "swiper-react": "^1.0.0",
     "tailwind-scrollbar-hide": "^2.0.0"
   },
   "devDependencies": {
