--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.0",
     "@langchain/core": "^0.3.40",
     "@langchain/groq": "^0.1.3",
     "@langchain/langgraph": "^0.2.46",
@@ -22,11 +23,15 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "langchain": "^0.3.19",
+    "mammoth": "^1.9.0",
     "mongodb": "^6.13.0",
     "mongodb-memory-server": "^10.1.3",
     "mongoose": "^8.10.0",
     "next": "15.1.7",
     "node-fetch": "^2.7.0",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.10.38",
+    "pdfreader": "^3.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
