--- a/secrets.yaml
+++ b/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: jwt-secrets
+  name: secrets
 type: Opaque
 data:
   JWT_SECRET: aC27ziSWlgWVWQqkfBaJ58CYQQhcr+tAAsOZXZ6kgDU=
