--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^8.10.0",
     "next": "15.1.7",
     "node-fetch": "^2.7.0",
+    "openai": "^4.87.3",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.10.38",
     "pdfreader": "^3.0.7",
