--- a/deployment.yaml
+++ b/deployment.yaml
@@ -28,6 +28,16 @@ spec:
         env:
         - name: MONGO_URL
           value: "mongodb://mongodb-service:27017/studybuddy"
+        - name: GEMINI_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: secrets
+              key: GEMINI_API_KEY
+        - name: MISTRAL_API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: secrets
+              key: MISTRAL_API_KEY
         - name: JWT_SECRET
           valueFrom:
             secretKeyRef:
@@ -38,10 +48,6 @@ spec:
             secretKeyRef:
               name: secrets
               key: JWT_REFRESH_SECRET
-        - name: GEMINI_API_KEY
-          value: "${GEMINI_API_KEY}"
-        - name: MISTRAL_API_KEY
-          value: "${MISTRAL_API_KEY}"
 ---
 apiVersion: v1
 kind: Service
