--- a/deployment.yaml
+++ b/deployment.yaml
@@ -24,7 +24,7 @@ spec:
             memory: "128Mi"
           limits:
             cpu: "200m"
-            memory: "256Mi"
+            memory: "1Gi"
         env:
         - name: MONGO_URL
           value: "mongodb://mongodb-service:27017/studybuddy"
