--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@langchain/langgraph": "^0.2.46",
     "@langchain/mistralai": "^0.2.0",
     "@langchain/mongodb": "^0.1.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "formidable": "^3.5.2",
