--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.10.0",
     "next": "15.1.7",
     "node-fetch": "^2.7.0",
+    "normalize.css": "^8.0.1",
     "openai": "^4.87.3",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^4.10.38",
