--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dropzone": "^14.3.5",
     "react-easy-crop": "^5.2.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "styled-jsx": "^5.1.6",
     "swiper": "^11.2.5",
     "swiper-react": "^1.0.0",
