final product completed

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@langchain/langgraph": "^0.2.46",
     "@langchain/mistralai": "^0.2.0",
     "@langchain/mongodb": "^0.1.0",
+    "@sendgrid/mail": "^8.1.4",
     "@upstash/qstash": "^2.7.22",
     "@upstash/redis": "^1.34.5",
     "@vercel/analytics": "^1.5.0",
@@ -32,6 +33,7 @@
     "mongoose": "^8.10.0",
     "next": "15.1.7",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^6.10.0",
     "normalize.css": "^8.0.1",
     "openai": "^4.87.3",
     "pdf-parse": "^1.1.1",
